--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="card-header">
           <h2>Generate a Password</h2>
         </div>
+        //Placeholders
         <div class="card-body">
           <textarea
             readonly
@@ -24,6 +25,7 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        //Button
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
